FixedOverflow2

--- a/Estilos.css
+++ b/Estilos.css
@@ -346,7 +346,7 @@ footer{
 
 .contenedor2{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-image: linear-gradient(to right, rgba(1,255,255,0.1), rgba(255,255,255,0.5)), url('./Multi/Aire1.svg');
     /* object-fit: contain; */
     background-repeat: no-repeat;
